# appgoblin-mcp

./: .env.example  .gitignore  .mcpbignore  README.md  manifest.json  pyproject.toml
.github/workflows/: release.yml
src/appgoblin_mcp/: __init__.py  __main__.py  client.py  tools.py
tests/: conftest.py  test_client.py  test_tools.py
