[project]
name = "appgoblin-mcp"
version = "0.1.0"
description = "MCP server exposing the AppGoblin public v1 API as tools"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2",
    "httpx>=0.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
]

[project.scripts]
appgoblin-mcp = "appgoblin_mcp.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
